Second_Step/data/46/155/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:13: error: ';' expected
        for(int i=0,i<n-1, i++){
                     ^
Tools.java:13: error: > expected
        for(int i=0,i<n-1, i++){
                       ^
Tools.java:13: error: ';' expected
        for(int i=0,i<n-1, i++){
                        ^
Tools.java:13: error: illegal start of expression
        for(int i=0,i<n-1, i++){
                         ^
Tools.java:13: error: ')' expected
        for(int i=0,i<n-1, i++){
                          ^
Tools.java:13: error: illegal start of expression
        for(int i=0,i<n-1, i++){
                              ^
Tools.java:14: error: ';' expected
            for(int k=i,k<n-1,k++){
                         ^
Tools.java:14: error: > expected
            for(int k=i,k<n-1,k++){
                           ^
Tools.java:14: error: ';' expected
            for(int k=i,k<n-1,k++){
                            ^
Tools.java:14: error: illegal start of expression
            for(int k=i,k<n-1,k++){
                             ^
Tools.java:14: error: ')' expected
            for(int k=i,k<n-1,k++){
                              ^
Tools.java:14: error: illegal start of expression
            for(int k=i,k<n-1,k++){
                                 ^
Tools.java:40: error: reached end of file while parsing
}
 ^
13 errors
Not compiled
